docs: update synapse capability descriptions and running commands in developer guides